date/d250219/recordings/143750.txt
Script started on 2025-02-19 14:37:50+01:00 [TERM="xterm-256color" TTY="/dev/pts/7" COLUMNS="92" LINES="11"]
[?2004h[94mdate/d250219 (B[m$  /usr/bin/env /bin/python3 /shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher 34871 -- /shared/kent/Documents/nackademin/python/py-live/date/d250219/conditionals.py 
[?2004lHur gammal är du? 109
Du får köra bil!
Nää nää nääänääää
Du får även promenera!
[?2004h[94mdate/d250219 (B[m$ ^C[?2004l[?2004h
[?2004l
[?2004h[94mdate/d250219 (B[m$  cd /shared/kent/Documents/nackademin/python/py-live ; /usr/bin/env /bin/python3 /shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher 36769 -- /shared/kent/Documents/nackademin/pytho n/py-live/date/d250219/conditionals.py 
[?2004lTraceback (most recent call last):
  File "/usr/lib/python3.11/runpy.py", line 198, in _run_module_as_main
    return _run_code(code, main_globals, None,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/runpy.py", line 88, in _run_code
    exec(code, run_globals)
  File "/shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher/../../debugpy/__main__.py", line 71, in <module>
    cli.main()
  File "/shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher/../../debugpy/../debugpy/server/cli.py", line 501, in main
    run()
  File "/shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher/../../debugpy/../debugpy/server/cli.py", line 351, in run_file
    runpy.run_path(target, run_name="__main__")
  File "/shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/_vendored/pydevd/_pydevd_bundle/pydevd_runpy.py", line 309, in run_path
    code, fname = _get_code_from_file(run_name, path_name)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/_vendored/pydevd/_pydevd_bundle/pydevd_runpy.py", line 283, in _get_code_from_file
    code = compile(f.read(), fname, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/shared/kent/Documents/nackademin/python/py-live/date/d250219/conditionals.py", line 6
    elieif age >= 16:
           ^^^
SyntaxError: invalid syntax
[?2004h[94m(B[m$ ^C[?2004l[?2004h
[?2004l
[?2004h[94m(B[m$  cd /shared/kent/Documents/nackademin/python/py-live ; /usr/bin/env /bin/python3 /shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher 33923 -- /shared/kent/Documents/nackademin/python/py-live/date/d250219/conditionals.py 
[?2004lHur gammal är du? 17
Du får inte köra bil!
Du får även promenera!
[?2004h[94m(B[m$ ^C[?2004l[?2004h
[?2004l
[?2004h[94m(B[m$  cd /shared/kent/Documents/nackademin/python/py-live ; /usr/bin/env /bin/python3 /shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher 59221 -- /shared/kent/Documents/nackademin/python/py-live/date/d250219/conditionals.py 
[?2004lHur gammal är du? 17
Du får övningsköra!
Du får även promenera!
[?2004h[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [H[2J[94m(B[m$ python
[?2004lPython 3.11.2 (main, Nov 30 2024, 21:22:50) [GCC 12.2.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> 1 + 3
4
>>> 
[?2004h[94m(B[m$ [H[2J[94m(B[m$ ^C[?2004l[?2004h
[?2004l
[?2004h[94m(B[m$  cd /shared/kent/Documents/nackademin/python/py-live ; /usr/bin/env /bin/python3 /shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher 34447 -- /shared/kent/Documents/nackademin/python/py-live/date/d250219/for_range.py 
[?2004l0
1
2
slut
[?2004h[94m(B[m$ ^C[?2004l[?2004h
[?2004l
[?2004h[94m(B[m$  cd /shared/kent/Documents/nackademin/python/py-live ; /usr/bin/env /bin/python3 /shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher 40361 -- /shared/kent/Documents/nackademin/python/py-live/date/d250219/for_list.py 
[?2004l[?2004h[94m(B[m$ ^C[?2004l[?2004h
[?2004l
[?2004h[94m(B[m$  cd /shared/kent/Documents/nackademin/python/py-live ; /usr/bin/env /bin/python3 /shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher 34533 -- /shared/kent/Documents/nackademin/python/py-live/date/d250219/for_list.py 
[?2004l[?2004h[94m(B[m$ ^C[?2004l[?2004h
[?2004l
[?2004h[94m(B[m$  cd /shared/kent/Documents/nackademin/python/py-live ; /usr/bin/env /bin/python3 /shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher 36683 -- /shared/kent/Documents/nackademin/python/py-live/date/d250219/for_continue_break.py 
[?2004l[?2004h[94m(B[m$ ^C[?2004l[?2004h
[?2004l
[?2004h[94m(B[m$  cd /shared/kent/Documents/nackademin/python/py-live ; /usr/bin/env /bin/python3 /shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher 44311 -- /shared/kent/Documents/nackademin/python/py-live/date/d250219/for_continue_break.py 
[?2004lsumma 2500
[?2004h[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ ^C[?2004l[?2004h
[?2004l
[?2004h[94m(B[m$  cd /shared/kent/Documents/nackademin/python/py-live ; /usr/bin/env /bin/python3 /shared/kent/.vscode/extensions/ms-python.debugpy-2025.0.1-linux-x64/bundled/libs/debugpy/adapter/../../debugpy/launcher 46689 -- /shared/kent/Documents/nackademin/python/py-live/date/d250219/for_continue_break.py 
[?2004l[?2004h[94m(B[m$ [K[94m(B[m$ [K[94m(B[m$ [?2004l
exit

Script done on 2025-02-19 15:32:44+01:00 [COMMAND_EXIT_CODE="247"]
